--- a/.gitignore
+++ b/.gitignore
@@ -1,93 +1,41 @@
-# IDE-specific files
-## IntelliJ IDEA
-.idea/
-*.iml
-*.iws
-out/
-
-## Eclipse
-.metadata/
-bin/
-
-## NetBeans
-nbproject/private/
-nbbuild/
-nbdist/
-nbactions.xml
-
-## JetBrains Rider
-*.sln
-*.csproj
-*.suo
-*.user
-*.userosscache
-
-## VS Code and Sublime
-.vscode/
-*.sublime-workspace
-*.sublime-project
-
-# Java-specific files
-*.class
-*.jar
-*.war
-*.ear
-*.log
-
-# Gradle
-.gradle/
+HELP.md
+.gradle
 build/
-!gradle/wrapper/gradle-wrapper.properties
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-# Angular-specific files
-node_modules/
-dist/
-coverage/
-.angular/
-package-lock.json
-yarn.lock
-*.tsbuildinfo
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
 
-# Dependency directories
-bower_components/
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
 
-# Python (if used for scripting)
-*.pyc
-__pycache__/
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
 
-# Archives and package management
-*.zip
-*.tar
-*.tar.gz
-*.tgz
-*.7z
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-
-# Temporary files
-*.tmp
-*.bak
-*.swp
-*.swo
-
-# Environment files
-.env
-*.env.local
-*.env.development
-*.env.test
-*.env.production
+### VS Code ###
+.vscode/
 
 # OS-specific files
 ## macOS
 .DS_Store
-.AppleDouble
-.LSOverride
-
-## Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-
-## Linux
-.Trash-*
