--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,12 +25,39 @@ spring:
 
 # Logging Configuration
 logging:
+  # Log level for web-related logging (set to DEBUG for additional web logging)
+  web: TRACE
+  root: TRACE
   level:
     # Log level for custom application configurations (set to INFO)
-    com.example.microservice.config: DEBUG
+    com:
+      example:
+        microservice:
+          config: TRACE
+      mongodb: TRACE
     # Log level for Spring Data MongoDB (set to DEBUG)
-    org.springframework.data.mongodb: DEBUG
-    # Log level for MongoDB driver (set to DEBUG)
-    com.mongodb: DEBUG
-    # Log level for web-related logging (set to DEBUG for additional web logging)
-    web: DEBUG
+    org:
+      springframework:
+        data:
+          # Log level for MongoDB driver (set to DEBUG)
+          mongodb: TRACE
+        boot:
+          test:
+            context:
+              SpringBootTestContextBootstrapper: TRACE
+        test:
+          context:
+            support:
+              AbstractContextLoader: TRACE
+              AnnotationConfigContextLoaderUtils: TRACE
+  file:
+    path: logs/myapp.log
+    name: logs/spring-boot-app.log  # Specify the file path
+  pattern:
+    file: "%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n"  # Customize log pattern
+
+
+
+#    root: INFO
+#    com.example: DEBUG
+#  file:
